--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -50,13 +50,13 @@ a:hover.all-tracks-l,a:hover.all-tracks-l span,a:hover.all-tracks-l span span,a:
 
 .contributors h1, header h1 {color:#fff;background: #000;}
 header h1 {font-size:12px;font-size:1.2rem;text-transform: uppercase;margin:0 0 10px -10px;padding:5px 0 0 0;}
-article h1 {padding:20px 10px 0 10px;margin:-20px 0 0 0;color:#000;background: #FFF;}
+article h1 {padding:20px 0 20 0;color:#000;background: #FFF;}
 article h1.hide-on-mobile {font-size:50px;font-size:5.0rem;}
 article h1.hide-on-desktop {font-size:25px;font-size:2.5rem;}
-article h2 {color:000;opacity:0.8;background-color:#FFF;padding:0 10px 40px 10px;}
+article h2 {color:000;opacity:0.8;background-color:#FFF;padding:10px 0 30px 0;}
 article h2.hide-on-mobile {font-size:40px;font-size:4.0rem;}
 article h2.hide-on-desktop {font-size:20px;font-size:2rem;}
-.contributors h1 {font-size:20px;font-size:2.0rem;padding:20px 0px 20px 0px;}
+.contributors h1 {font-size:20px;font-size:2.0rem;padding:20px 0 20px 0;}
 /* ----- list ----- */
 
 .contributors ul,.contributors li {text-align:left;list-style-type:none; ;}
@@ -66,9 +66,10 @@ article h2.hide-on-desktop {font-size:20px;font-size:2rem;}
 /* **************** TEMPLATE ***************** */
 /* ====== Page Head, Body, and Foot ====== */
 
-article,.content,input.search,input.submit{background-color:#FFF;color: #000;}
+.content-text,article {background-color: #FFF;}
+input.search,input.submit{background-color:#FFF;color: #000;}
 .content{padding:0px 0 0px 0;}
-.content-text {padding-top: 40px;}
+.content-text {padding-top: 0px;top:40px;position: relative}
 
 input.search {border:none;padding:3px 1px 1px 1px;margin:-4px 0 0 0;}
 input.submit {border:none;font-size:09px;font-size:0.9rem;margin-right:-11px;padding: 2px;}
